@@ -1,3 +1,8 @@
+2007-03-25  Robert Ancell <robert.ancell@gmail.com>
+
+	* Use string substitution using dictionary lookups when using ngettext to stop
+	  substitution exceptions (Bug #409739)
+
 2007-03-24  Robert Ancell <robert.ancell@gmail.com>
 
 	* src/lib/sudoku_maker.py Correctly mark game name as unicode so
